<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/gray_5"
    tools:context=".ui.AddStoriesA">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:id="@+id/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/image"
        android:contentDescription="@string/image"
        android:src="@drawable/placeholder"
        app:layout_constraintTop_toBottomOf="@+id/text1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.fadli.pleaselulus.custom.CustomButtonRegister
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:text="@string/take_photo"
            android:id="@+id/takePhoto"/>

        <com.fadli.pleaselulus.custom.CustomButtonRegister
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/add_image"
            android:id="@+id/btnUpload"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_deskripsi"
        android:textColor="@color/white"
        android:id="@+id/text2"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/linear"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputDeskripsi"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/deskripsi"
        android:textSize="14sp"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/text2"/>

    <com.fadli.pleaselulus.custom.CustomButtonLogin
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_story"
        android:id="@+id/addStory"
        android:textSize="14sp"
        android:backgroundTint="@color/gray_3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pbar_login"
        android:visibility="gone"
        android:indeterminateTint="@color/primary_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>