<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginActivity"
    android:background="@color/gray_5"
    tools:context=".ui.LoginA">

    <ProgressBar
        android:id="@+id/pbar_login"
        android:visibility="gone"
        android:layout_marginTop="440dp"
        android:indeterminateTint="@color/primary_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="144dp"
            android:text="@string/text1"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.fadli.pleaselulus.custom.CustomInputEmail
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:alpha="0"
            android:background="@drawable/custom_input"
            android:paddingStart="16dp"
            android:textColor="@color/gray_5"
            android:textColorHint="@color/gray_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            tools:ignore="RtlSymmetry" />

        <com.fadli.pleaselulus.custom.CustomInputPassword
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_input"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:alpha="0"
            android:textColor="@color/gray_5"
            android:textColorHint="@color/gray_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:ignore="RtlSymmetry" />

        <com.fadli.pleaselulus.custom.CustomButtonLogin
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:alpha="0"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:alpha="0"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <com.fadli.pleaselulus.custom.CustomButtonRegister
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>